refactor: move dto definition, add converter
